--- a/Homework 4.Rmd
+++ b/Homework 4.Rmd
@@ -27,4 +27,8 @@ You can also embed plots, for example:
 plot(pressure)
 ```
 
+
+Group project 1 Test from Elin
+Hello from Elin
+
 Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
