--- a/Tele_Start.Rmd
+++ b/Tele_Start.Rmd
@@ -118,89 +118,91 @@ test_set <- sample(1:nrow(tele_norm), 10000)
 
 # Create a train set and test set
 #First the predictors - all columns except the yyes column
-tele_train <- tele_norm[-test_set, -match("yyes",names(tele_norm))]
-tele_test <- tele_norm[test_set, -match("yyes",names(tele_norm))]
+tele_train_norm <-
+  tele_norm[-test_set, -match("yyes",names(tele_norm))]
+tele_test_norm <-
+  tele_norm[test_set, -match("yyes",names(tele_norm))]
+
+tele_train_reg = tele[-test_set,]# -match("y",names(tele))]
+tele_test_reg = tele[test_set,  -match("y",names(tele))]
 
 #Now the response (aka Labels) - only the yyes column
-tele_train_labels <- tele_norm[-test_set, "yyes"]
-tele_test_labels <- tele_norm[test_set, "yyes"]
+tele_train_labels_norm <- tele_norm[-test_set, "yyes"]
+tele_test_labels_norm <- tele_norm[test_set, "yyes"]
+
+tele_train_labels_reg <- tele[-test_set, "y"]
+tele_test_labels_reg <- tele[test_set, "y"]
 ```
 
 
-# Logarithmic, KNN, and ANN
+# Step 2: Logarithmic, KNN, and ANN
 
 ## Separate Clusters
 
 ```{r}
 # Get clusters 1, 3, and 4 with logical indexing
-tele_cluster_1 = tele[tele$cluster == 1,]
-tele_cluster_3 = tele[tele$cluster == 3,]
-tele_cluster_4 = tele[tele$cluster == 4,]
+tc1_train_norm = tele_train_norm[tele_train_norm$cluster == 1,]
+tc3_train_norm = tele_train_norm[tele_train_norm$cluster == 3,]
+tc4_train_norm = tele_train_norm[tele_train_norm$cluster == 4,]
 
-# This is the binary versions of all factors
-tele_cluster_1_mm = telemm[telemm$cluster == 1,]
-tele_cluster_3_mm = telemm[telemm$cluster == 3,]
-tele_cluster_4_mm = telemm[telemm$cluster == 4,]
+tc1_train_reg = tele_train_reg[tele_train_reg$cluster == 1,]
+tc3_train_reg = tele_train_reg[tele_train_reg$cluster == 3,]
+tc4_train_reg = tele_train_reg[tele_train_reg$cluster == 4,]
 
-# This is the binary versions of all factors
-tele_cluster_1_norm = tele_norm[tele_norm$cluster == 1,]
-tele_cluster_3_norm = tele_norm[tele_norm$cluster == 3,]
-tele_cluster_4_norm = tele_norm[tele_norm$cluster == 4,]
+tc1_test_norm = tele_test_norm[tele_test_norm$cluster == 1,]
+tc3_test_norm = tele_test_norm[tele_test_norm$cluster == 3,]
+tc4_test_norm = tele_test_norm[tele_test_norm$cluster == 4,]
+
+tc1_test_reg = tele_test_reg[tele_test_reg$cluster == 1,]
+tc3_test_reg = tele_test_reg[tele_test_reg$cluster == 3,]
+tc4_test_reg = tele_test_reg[tele_test_reg$cluster == 4,]
+
+tc1_train_labels_norm =
+  tele_train_labels_norm[tele_train_norm$cluster == 1]
+tc3_train_labels_norm =
+  tele_train_labels_norm[tele_train_norm$cluster == 3]
+tc4_train_labels_norm =
+  tele_train_labels_norm[tele_train_norm$cluster == 4]
+
+tc1_test_labels_norm =
+  tele_test_labels_norm[tele_test_norm$cluster == 1]
+tc3_test_labels_norm =
+  tele_test_labels_norm[tele_test_norm$cluster == 3]
+tc4_test_labels_norm =
+  tele_test_labels_norm[tele_test_norm$cluster == 4]
+
 # Clusters 2 and 5 are already above 17%
 ```
 
 
 ## Cluster 1
 
-### Creating Test and Train Data
-```{r}
-set.seed(0)
-test_indices_1 <- sample(1:nrow(tele_cluster_1_norm), 2500)
-
-# Create a train set and test set
-#First the predictors - all columns except the yyes column
-tc1_train <- tele_cluster_1_norm[-test_indices_1, -match("yyes",names(tele_cluster_1_norm))]
-tc1_test <- tele_cluster_1_norm[test_indices_1, -match("yyes",names(tele_cluster_1_norm))]
-
-#Now the response (aka Labels) - only the yyes column
-tc1_train_labels <- tele_cluster_1_norm[-test_indices_1, "yyes"]
-tc1_test_labels <- tele_cluster_1_norm[test_indices_1, "yyes"]
-```
-
 ### Logistic
 ```{r}
 tc1_log = glm(formula = y ~ .,
-              data = tele_cluster_1[-test_indices_1,],
+              data = tc1_train_reg,
               family = "binomial")
 
 tc1_log_model = predict.glm(tc1_log,
-              newdata = tele_cluster_1[test_indices_1,],
+              newdata = tc1_test_reg,
               type = "response")
 tc1_log_model = ifelse(tc1_log_model > 0.5, 1, 0)
 
-CrossTable(x = tc1_test_labels, y = tc1_log_model,
-           prop.chisq=FALSE)
-
-confusionMatrix(as.factor(tc1_log_model),
-                as.factor(tc1_test_labels))
 ```
 
 ### K-Nearest Neighbors
 ```{r}
-tc1_knn_model = knn(train = tc1_train, test = tc1_test,
-                      cl = tc1_train_labels, k = 101)
+tc1_knn_model = knn(train = tc1_train_norm,
+                    test = tc1_test_norm,
+                      cl = tc1_train_labels_norm, k = 101)
 
-CrossTable(x = tc1_test_labels, y = tc1_knn_model,
-           prop.chisq=FALSE)
-
-confusionMatrix(as.factor(tc1_knn_model), as.factor(tc1_test_labels))
 ```
 
 ### Artificial Neural Net
 ```{r, cache = TRUE}
-tc1_train_with_yyes = tc1_train
-tc1_train_with_yyes$yyes =
-  tele_cluster_1_norm[-test_indices_1,]$yyes
+# Put back yyes column in copy of tc1_train_norm
+tc1_train_with_yyes = tc1_train_norm
+tc1_train_with_yyes$yyes = as.numeric(tc1_train_reg$y) - 1
 
 tc1_ann = neuralnet(formula = yyes ~ .,
                         data = tc1_train_with_yyes,
@@ -209,15 +211,10 @@ tc1_ann = neuralnet(formula = yyes ~ .,
 
 
 ```{r}
-tc1_ann_model = predict(tc1_ann, newdata = tc1_test,
+tc1_ann_model = predict(tc1_ann, newdata = tc1_test_norm,
                         type = "response")
 
 tc1_ann_model = ifelse(tc1_ann_model > 0.5, 1, 0)
-
-CrossTable(x = tc1_test_labels, y = tc1_ann_model,
-           prop.chisq=FALSE)
-
-confusionMatrix(as.factor(tc1_ann_model), as.factor(tc1_test_labels))
 ```
 
 ### Combine Models
@@ -227,64 +224,36 @@ confusionMatrix(as.factor(tc1_ann_model), as.factor(tc1_test_labels))
 tc1_knn_model = as.numeric(tc1_knn_model)
 tc1_combine_model = tc1_ann_model + tc1_knn_model + tc1_log_model
 tc1_combine_model = ifelse(tc1_combine_model >= 2, 1, 0)
-
-CrossTable(x = tc1_test_labels, y = tc1_combine_model,
-           prop.chisq=FALSE)
-
-confusionMatrix(as.factor(tc1_combine_model), as.factor(tc1_test_labels))
 ```
 
 ## Cluster 3
 
-### Creating Test and Train Data
-```{r}
-set.seed(0)
-test_indices_3 <- sample(1:nrow(tele_cluster_3_norm), 600)
-
-# Create a train set and test set
-#First the predictors - all columns except the yyes column
-tc3_train <- tele_cluster_3_norm[-test_indices_3, -match("yyes",names(tele_cluster_3_norm))]
-tc3_test <- tele_cluster_3_norm[test_indices_3, -match("yyes",names(tele_cluster_3_norm))]
-
-#Now the response (aka Labels) - only the yyes column
-tc3_train_labels <- tele_cluster_3_norm[-test_indices_3, "yyes"]
-tc3_test_labels <- tele_cluster_3_norm[test_indices_3, "yyes"]
-```
-
 ### Logistic
 ```{r}
 tc3_log = glm(formula = y ~ .,
-              data = tele_cluster_3[-test_indices_3,],
+              data = tc3_train_reg,
               family = "binomial")
 
 tc3_log_model = predict.glm(tc3_log,
-              newdata = tele_cluster_3[test_indices_3,],
+              newdata = tc3_test_reg,
               type = "response")
 tc3_log_model = ifelse(tc3_log_model > 0.5, 1, 0)
 
-CrossTable(x = tc3_test_labels, y = tc3_log_model,
-           prop.chisq=FALSE)
-
-confusionMatrix(as.factor(tc3_log_model),
-                as.factor(tc3_test_labels))
 ```
 
 ### K-Nearest Neighbors
 ```{r}
-tc3_knn_model = knn(train = tc3_train, test = tc3_test,
-                      cl = tc3_train_labels, k = 53)
+tc3_knn_model = knn(train = tc3_train_norm,
+                    test = tc3_test_norm,
+                      cl = tc3_train_labels_norm, k = 53)
 
-CrossTable(x = tc3_test_labels, y = tc3_knn_model,
-           prop.chisq=FALSE)
-
-confusionMatrix(as.factor(tc3_knn_model), as.factor(tc3_test_labels))
 ```
 
 ### Artificial Neural Net
 ```{r, cache = TRUE}
-tc3_train_with_yyes = tc3_train
-tc3_train_with_yyes$yyes =
-  tele_cluster_3_norm[-test_indices_3,]$yyes
+# Put back yyes column in copy of tc3_train_norm
+tc3_train_with_yyes = tc3_train_norm
+tc3_train_with_yyes$yyes = as.numeric(tc3_train_reg$y) - 1
 
 tc3_ann = neuralnet(formula = yyes ~ .,
                         data = tc3_train_with_yyes,
@@ -293,15 +262,10 @@ tc3_ann = neuralnet(formula = yyes ~ .,
 
 
 ```{r}
-tc3_ann_model = predict(tc3_ann, newdata = tc3_test,
+tc3_ann_model = predict(tc3_ann, newdata = tc3_test_norm,
                         type = "response")
 
 tc3_ann_model = ifelse(tc3_ann_model > 0.5, 1, 0)
-
-CrossTable(x = tc3_test_labels, y = tc3_ann_model,
-           prop.chisq=FALSE)
-
-confusionMatrix(as.factor(tc3_ann_model), as.factor(tc3_test_labels))
 ```
 
 ### Combine Models
@@ -311,64 +275,36 @@ confusionMatrix(as.factor(tc3_ann_model), as.factor(tc3_test_labels))
 tc3_knn_model = as.numeric(tc3_knn_model)
 tc3_combine_model = tc3_ann_model + tc3_knn_model + tc3_log_model
 tc3_combine_model = ifelse(tc3_combine_model >= 2, 1, 0)
-
-CrossTable(x = tc3_test_labels, y = tc3_combine_model,
-           prop.chisq=FALSE)
-
-confusionMatrix(as.factor(tc3_combine_model), as.factor(tc3_test_labels))
 ```
 
 ## Cluster 4
 
-### Creating Test and Train Data
-```{r}
-set.seed(0)
-test_indices_4 <- sample(1:nrow(tele_cluster_4_norm), 5500)
-
-# Create a train set and test set
-#First the predictors - all columns except the yyes column
-tc4_train <- tele_cluster_4_norm[-test_indices_4, -match("yyes",names(tele_cluster_4_norm))]
-tc4_test <- tele_cluster_4_norm[test_indices_4, -match("yyes",names(tele_cluster_4_norm))]
-
-#Now the response (aka Labels) - only the yyes column
-tc4_train_labels <- tele_cluster_4_norm[-test_indices_4, "yyes"]
-tc4_test_labels <- tele_cluster_4_norm[test_indices_4, "yyes"]
-```
-
 ### Logistic
 ```{r}
 tc4_log = glm(formula = y ~ .,
-              data = tele_cluster_4[-test_indices_4,],
+              data = tc4_train_reg,
               family = "binomial")
 
 tc4_log_model = predict.glm(tc4_log,
-              newdata = tele_cluster_4[test_indices_4,],
+              newdata = tc4_test_reg,
               type = "response")
 tc4_log_model = ifelse(tc4_log_model > 0.5, 1, 0)
 
-CrossTable(x = tc4_test_labels, y = tc4_log_model,
-           prop.chisq=FALSE)
-
-confusionMatrix(as.factor(tc4_log_model),
-                as.factor(tc4_test_labels))
 ```
 
 ### K-Nearest Neighbors
 ```{r}
-tc4_knn_model = knn(train = tc4_train, test = tc4_test,
-                      cl = tc4_train_labels, k = 47)
+tc4_knn_model = knn(train = tc4_train_norm,
+                    test = tc4_test_norm,
+                      cl = tc4_train_labels_norm, k = 47)
 
-CrossTable(x = tc4_test_labels, y = tc4_knn_model,
-           prop.chisq=FALSE)
-
-confusionMatrix(as.factor(tc4_knn_model), as.factor(tc4_test_labels))
 ```
 
 ### Artificial Neural Net
 ```{r, cache = TRUE}
-tc4_train_with_yyes = tc4_train
-tc4_train_with_yyes$yyes =
-  tele_cluster_4_norm[-test_indices_4,]$yyes
+# Put back yyes column in copy of tc4_train_norm
+tc4_train_with_yyes = tc4_train_norm
+tc4_train_with_yyes$yyes = as.numeric(tc4_train_reg$y) - 1
 
 tc4_ann = neuralnet(formula = yyes ~ .,
                         data = tc4_train_with_yyes,
@@ -377,15 +313,10 @@ tc4_ann = neuralnet(formula = yyes ~ .,
 
 
 ```{r}
-tc4_ann_model = predict(tc4_ann, newdata = tc4_test,
+tc4_ann_model = predict(tc4_ann, newdata = tc4_test_norm,
                         type = "response")
 
 tc4_ann_model = ifelse(tc4_ann_model > 0.5, 1, 0)
-
-CrossTable(x = tc4_test_labels, y = tc4_ann_model,
-           prop.chisq=FALSE)
-
-confusionMatrix(as.factor(tc4_ann_model), as.factor(tc4_test_labels))
 ```
 
 ### Combine Models
@@ -395,16 +326,33 @@ confusionMatrix(as.factor(tc4_ann_model), as.factor(tc4_test_labels))
 tc4_knn_model = as.numeric(tc4_knn_model)
 tc4_combine_model = tc4_ann_model + tc4_knn_model + tc4_log_model
 tc4_combine_model = ifelse(tc4_combine_model >= 2, 1, 0)
-
-CrossTable(x = tc4_test_labels, y = tc4_combine_model,
-           prop.chisq=FALSE)
-
-confusionMatrix(as.factor(tc4_combine_model), as.factor(tc4_test_labels))
 ```
 
 # Step 3: Combine Everything
 
 ```{r}
+# final model is first a copy of tc1 combine model
+# so that final model is the correct length
+final_model = tc1_combine_model
+# Make full combine model filled with zeroes
+final_model[final_model == 0] = 0
 
+for (i in 1:nrows(final_model)) {
+  # Call everyone in clusters 2 and 5
+  if (tele_test_reg$cluster[i] == 2 |
+      tele_test_reg$cluster[i] == 5) {
+    final_model[i] = 1
+  }
+  # Use the model predictions for remaining clusters
+  else if (tele_test_reg$cluster[i] == 1) {
+    final_model[i] = tc1_combine_model[i]
+  }
+  else if (tele_test_reg$cluster[i] == 3) {
+    final_model[i] = tc3_combine_model[i]
+  }
+  else if (tele_test_reg$cluster[i] == 4) {
+    final_model[i] = tc4_combine_model[i]
+  }
+}
 ```
 
